--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-right">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/bibh.jpg">
+              <img class="img-fluid" src="img/bibh.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Bibhor</h3>
@@ -256,7 +256,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-right">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Rahat.jpg">
+              <img class="img-fluid" src="img/Rahat.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Rahat</h3>
@@ -273,7 +273,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-left">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Taha.png">
+              <img class="img-fluid" src="img/Taha.png">
             </div>
             <div class="team-content">
               <h3 class="name">Taha</h3>
@@ -290,7 +290,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-left">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/rj.jpg">
+              <img class="img-fluid" src="img/rj.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Raiyan</h3>
@@ -314,7 +314,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-right">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Saika.jpg">
+              <img class="img-fluid" src="img/Saika.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Saika</h3>
@@ -331,7 +331,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-right">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Mouneeta.jpg">
+              <img class="img-fluid" src="img/Mouneeta.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Mouneeta</h3>
@@ -348,7 +348,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-left">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Amrin.jpg">
+              <img class="img-fluid" src="img/Amrin.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Amrin</h3>
@@ -365,7 +365,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-left">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Koushik.jpg">
+              <img class="img-fluid" src="img/Koushik.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Koushik</h3>
@@ -388,7 +388,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-right">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Shafiq.jpg">
+              <img class="img-fluid" src="img/Shafiq.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Shafiq</h3>
@@ -405,7 +405,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-right">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Asif.jpg">
+              <img class="img-fluid" src="img/Asif.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Asif</h3>
@@ -422,7 +422,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-left">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Wakif.jpg">
+              <img class="img-fluid" src="img/Wakif.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Wakif</h3>
@@ -439,7 +439,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-left">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="../224-Project/img/Shezan.jpg">
+              <img class="img-fluid" src="img/Shezan.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Shezan</h3>
