--- a/ProfileMouneeta.html
+++ b/ProfileMouneeta.html
@@ -231,9 +231,9 @@
                                 </thead>
                                 <tbody>
                                   <tr>
-                                    <td>SSC</td>
+                                    <td>O level</td>
                                     <td>2016</td>
-                                    <td>Adamjee Cantonment School and College,Dhaka</td>
+                                    <td>ISP</td>
                                     <td>5.00</td>
                                   </tr>
                                   <tr>
